# strategie-130-30

./: .gitignore  README.md  app.py  pyproject.toml  refresh.py  run_backtest.py  run_ic_analysis.py  run_live_picks.py  run_sector_analysis.py  run_tune_alpha.py
dashboard/: components.py  data.py
dashboard/pages/: black_litterman.py  live_picks.py  performance.py  regime.py  sectors.py  signals_ic.py  stress.py  summary.py
data/scraping/: wikipedia_S&P_scraper.py
src/analysis/: bootstrap.py  ic_analysis.py  sector_analysis.py
src/backtest/: engine.py  frictions.py  purged_kfold.py  validator.py
src/optimization/: black_litterman.py
src/regime/: hmm.py
src/signals/: accruals.py  fundamentals.py  high_52w.py  illiquidity.py  insider_trading.py  low_volatility.py  momentum.py  reversal.py  sue.py
src/stress/: scenarios.py
src/universe/: calculate_performance.py  calculate_returns.py  download_prices.py  historical_constituents.py
