[project]
name = "strategie-alpha-130-30"
version = "0.1.0"
description = "Cross-sectional alpha strategy with 130/30 portfolio construction"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "cvxpy>=1.4",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "requests>=2.31",
    "lxml>=5.0.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.35",
    "plotly>=5.20",
    "hmmlearn>=0.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
]

